--- a/styles.scss
+++ b/styles.scss
@@ -10,16 +10,17 @@ body {
     position: relative;
     top: 0;
     left: 0;
-    background-color: magenta;
     height: 140px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: $header-size;
+    // font-size: $header-size;
     font-weight: bold;
 }
 
 .container {
     background-color: #ddd;
     height: 200px;
+    max-width: 700px;
+}
+
+.task {
+
 }
