--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,12 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  background-color: magenta;
   height: 140px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 40px;
   font-weight: bold;
 }
 
 .container {
   background-color: #ddd;
   height: 200px;
+  max-width: 700px;
 }/*# sourceMappingURL=styles.css.map */
