--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,19 @@ body {
   background-color: #ddd;
   height: 200px;
   max-width: 700px;
+}
+
+.task {
+  position: relative;
+}
+
+.delete-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  filter: invert(10%) sepia(72%) saturate(6559%) hue-rotate(0deg) brightness(100%) contrast(115%);
 }/*# sourceMappingURL=styles.css.map */
