--- a/styles.scss
+++ b/styles.scss
@@ -17,8 +17,11 @@ body {
 
 .container {
     background-color: #ddd;
-    height: 200px;
     max-width: 700px;
+}
+
+#project-container {
+    position: relative;
 }
 
 .task {
@@ -34,4 +37,11 @@ body {
     width: 30px;
     cursor: pointer;
     filter: invert(10%) sepia(72%) saturate(6559%) hue-rotate(0deg) brightness(100%) contrast(115%);
+}
+
+#add-task-button {
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translateX(-50%);
 }
