--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,5 @@
 @import './node_modules/bootstrap/dist/css/bootstrap.min.css';
 
-$header-size: 40px;
-
 body {
     background-color: #eee;
 }
@@ -11,7 +9,6 @@ body {
     top: 0;
     left: 0;
     height: 140px;
-    // font-size: $header-size;
     font-weight: bold;
 }
 
@@ -20,8 +17,8 @@ body {
     max-width: 700px;
 }
 
-#project-container {
-    position: relative;
+#project-container .col-sm {
+    cursor: pointer;
 }
 
 .task {
