--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,11 @@ body {
   max-width: 700px;
 }
 
-#project-container .col-sm {
+#projects-container {
+  cursor: pointer;
+}
+
+#projects-container .col-sm {
   cursor: pointer;
 }
 
